
export class ResourcePiles {
    constructor() {
        // Хранилище нектара:
        this.nectar = {
            x: 45,         // Координата X расположения хранилища в улье
            y: 70,         // Координата Y расположения хранилища в улье
            amount: 0      // Текущее количество нектара (начинается с 0)
        };

        // Хранилище пыльцы:
        this.pollen = {
            x: 55,         // Координата X расположения хранилища в улье
            y: 70,         // Координата Y расположения хранилища в улье
            amount: 0      // Текущее количество пыльцы (начинается с 0)
        };

        // Хранилище меда:
        this.honey = {
            x: 65,         // Координата X расположения хранилища в улье
            y: 70,         // Координата Y расположения хранилища в улье
            amount: 0      // Текущее количество меда (начинается с 0)
        };
    }
}


